# src 目录下的 CMakeLists.txt
add_executable(pra1 practice_1.cpp)
add_executable(pra2 practice_2.cpp)
add_executable(pra3 practice_3.cpp)
add_executable(pra4 practice_4.cpp)
add_executable(pra2-1 practice2_1.cpp)
add_executable(pra2-2 practice2_2.cpp)
add_executable(pra2-3 practice2_3.cpp)
add_executable(pra2-4 practice2_4.cpp)


